# Segs-Client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeScripts/: LocateQt5.cmake  Windeployqt.cmake
SEGSLauncher/: CMakeLists.txt  Launcher.cpp  Launcher.h  LauncherSetup.cpp  LauncherSetup.h  MainWindow.qml  MediaManager.cpp  MediaManager.h  MediaManager.qml  ServerDialog.qml  Setup.qml  Worker.cpp  Worker.h  main.cpp  main.qml  qml.qrc
build-3rd_party-Desktop_Qt_5_15_2_MSVC2019_64bit/: CMakeCache.txt  qtcsettings.cmake
